[package]
name = "robeats-bot"
version = "1.0.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true

[dependencies]
eframe = "0.33.3"
rfd = "0.17.2"
serde_json = "1.0.149"

[dependencies.serde]
version = "1.0.228"
features = [
    "derive",
]

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_Media",
]